# tap-decentraland-thegraph

./: .gitignore  README.md  config.json  meltano.yml  pyproject.toml  tap-decentraland-thegraph.sh  tox.ini
output/: nfts_wearables_polygon.jsonl
tap_decentraland_thegraph/: accounts_streams.py  bids_streams.py  bids_streams_polygon.py  client.py  dao_earnings.py  mana_holders_streams.py  nfts_mints_polygon.py  nfts_streams.py  nfts_streams_polygon.py  orders_streams.py  orders_streams_polygon.py  poaps.py  rentals_streams.py  sales_streams.py  streams.py  tap.py
tap_decentraland_thegraph/data/: sales.json
tap_decentraland_thegraph/tests/: __init__.py  test_core.py
